@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Respect meta->{arch}
+  - cleanup _alien directory for distclean
 
 0.01      2017-02-02 13:34:58 -0500
   - initial version
